Fix for fonts blurry + smooth overlay transition

--- a/rhombus/css/front.css
+++ b/rhombus/css/front.css
@@ -1,8 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=latin,cyrillic);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:500,400,300,600,700&subset=latin,cyrillic);
 
 body {
 	font-family: 'Open Sans', sans-serif;
 	padding-top: 50px;
+	-moz-font-smoothing: none;
+	font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 }
 
 /* Navbar */
@@ -33,6 +36,11 @@ body {
 	width: 100%;
 	height: 100%;
 	background: rgba(0,0,0,.5);
+	-webkit-transition: all ease-in-out 0.2s;
+	-moz-transition: all ease-in-out 0.2s;
+	-ms-transition: all ease-in-out 0.2s;
+	-o-transition: all ease-in-out 0.2s;
+	transition: all ease-in-out 0.2s;
 }
 
 .featured:hover .overlay {
@@ -51,6 +59,7 @@ body {
 }
 
 .featured .caption h3 {
+	font-size: 20px;
 	font-weight: 400;
 	-webkit-transform: translate(0, 10px);
 	-moz-transform: translate(0, 10px);
